--- a/index.html
+++ b/index.html
@@ -2,14 +2,73 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Coming Soon</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ibn Katheer Quran Competition</title>
   <link rel="stylesheet" href="styles.css" />
+  <script defer src="script.js"></script>
 </head>
 <body>
-  <div class="container">
+  <nav class="navbar">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#judges">Judges</a>
+    <a href="#rules">Rules</a>
+    <a href="#register">Register</a>
+    <a href="#contact">Contact</a>
+    <a href="#donate">Donate</a>
+  </nav>
+
+  <section id="home" class="container">
     <div class="card"></div>
-    <div class="text">Coming Soon</div>
-  </div>
+    <div class="text">September 2025</div>
+  </section>
+
+  <section id="about" class="section">
+    <h2>About</h2>
+    <p>The Ibn Katheer Quran Competition is a new annual statewide initiative launching in September 2025 to uplift Quranic literacy through high-level memorization and recitation. It will bring together participants from across Oregon in a spiritually grounded, professionally judged environment—featuring renowned scholars like Shaykh Mohamed Najeeb and Shaykh Abdullah Sharqawy.</p>
+  </section>
+
+  <section id="judges" class="section">
+    <h2>Judges</h2>
+    <div class="judges-grid">
+      <img src="judge1.jpg" alt="Shaykh Mohamed Najeeb" onclick="showJudgeCard('najeeb')">
+      <img src="judge2.jpg" alt="Shaykh Abdullah Sharqawy" onclick="showJudgeCard('sharqawy')">
+      <img src="judge3.jpg" alt="Judge 3" onclick="showJudgeCard('judge3')">
+    </div>
+    <div id="judge-card" class="hidden">
+      <div class="card-content">
+        <button onclick="closeJudgeCard()">Close</button>
+        <div id="judge-info"></div>
+      </div>
+    </div>
+  </section>
+
+  <section id="rules" class="section">
+    <h2>Rules and Regulations</h2>
+    <ul>
+      <li>Participants must reside in Oregon.</li>
+      <li>Memorization will be judged based on accuracy and tajweed.</li>
+      <li>Categories will be based on age and Juz levels.</li>
+    </ul>
+  </section>
+
+  <section id="register" class="section">
+    <h2>Register</h2>
+    <h3><a title="Registration" href="https://tally.so/r/n9y8RY" target="_blank" rel="noopener noreferrer">Click Here to Register!</a></h3>
+    <iframe title="Registration" src="https://tally.so/r/n9y8RY" width="100%" height="1000px" frameborder="0"></iframe>
+    <div></div>
+  </section>
+
+  <section id="contact" class="section">
+    <h2>Communications and Social Media</h2>
+    <p>Email: info@ibnkatheerquran.org</p>
+    <p>Instagram: @ibnkatheercomp</p>
+  </section>
+
+  <section id="donate" class="section">
+    <h2>Support the Competition</h2>
+    <a href="https://donate.example.com" class="donate-btn">Donate Now</a>
+    <p><strong>EIN:</strong> 12-3456789</p>
+  </section>
 </body>
 </html>
