--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ibn Katheer Quran Competition</title>
+  <link rel='icon' href='logo.ico' type='image/x-icon'/ >
   <link rel="stylesheet" href="styles.css" />
   <script defer src="script.js"></script>
 </head>
@@ -33,7 +34,7 @@
     <div class="judges-grid">
       <img src="judge1.jpg" alt="Shaykh Mohamed Najeeb" onclick="showJudgeCard('najeeb')">
       <img src="judge2.jpg" alt="Shaykh Abdullah Sharqawy" onclick="showJudgeCard('sharqawy')">
-      <img src="judge3.jpg" alt="Judge 3" onclick="showJudgeCard('judge3')">
+      <img src="judge3.jpg" alt="Shaykh Wasil Jemal" onclick="showJudgeCard('wasil')">
     </div>
     <div id="judge-card" class="hidden">
       <div class="card-content">
@@ -45,11 +46,9 @@
 
   <section id="rules" class="section">
     <h2>Rules and Regulations</h2>
-    <ul>
-      <li>Participants must reside in Oregon.</li>
-      <li>Memorization will be judged based on accuracy and tajweed.</li>
-      <li>Categories will be based on age and Juz levels.</li>
-    </ul>
+    <p>Participants must reside in Oregon.</p>
+    <p>Memorization will be judged based on accuracy and tajweed.</p>
+    <p>Categories will be based on age and Juz levels.</p>
   </section>
 
   <section id="register" class="section">
@@ -61,8 +60,8 @@
 
   <section id="contact" class="section">
     <h2>Communications and Social Media</h2>
-    <p>Email: info@ibnkatheerquran.org</p>
-    <p>Instagram: @ibnkatheercomp</p>
+    <p>Email: <a href="mailto:ibnkatheercomp@gmail.com">ibnkatheercomp@gmail.com</a></p>
+    <p>Instagram: <a href="https://www.instagram.com/ibnkatheercomp/" rel="noopener noreferrer" target="_blank">@ibnkatheercomp</a></p>
   </section>
 
   <section id="donate" class="section">
