--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <section id="register" class="section">
     <h2>Register</h2>
-    <h3><a title="Registration" href="https://tally.so/r/n9y8RY" target="_blank" rel="noopener noreferrer">Click Here to Register!</a></h3>
+    <h3><a title="Registration" href="https://tally.so/r/n9y8RY" target="_blank" rel="noopener noreferrer" class="donate-btn">Click Here to Register!</a></h3>
     <iframe title="Registration" src="https://tally.so/r/n9y8RY" width="100%" height="1000px" frameborder="0"></iframe>
     <div></div>
   </section>
@@ -66,8 +66,8 @@
 
   <section id="donate" class="section">
     <h2>Support the Competition</h2>
-    <a href="https://donate.example.com" class="donate-btn">Donate Now</a>
-    <p><strong>EIN:</strong> 12-3456789</p>
+    <a href="https://www.zeffy.com/donation-form/ibn-katheer-quran-competition-5" target="_blank" rel="noopener noreferrer" class="donate-btn">Donate Now</a>
+    <p><strong>EIN:</strong> 39-2141910</p>
   </section>
 </body>
 </html>
