--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <section id="register" class="section">
     <h2>Register</h2>
     <h3><a title="Registration" href="https://tally.so/r/n9y8RY" target="_blank" rel="noopener noreferrer" class="donate-btn">Click Here to Register!</a></h3>
-    <iframe title="Registration" src="https://tally.so/r/n9y8RY" width="100%" height="1000px" frameborder="0"></iframe>
+    <iframe title="Registration" src="https://tally.so/r/n9y8RY" frameborder="0"></iframe>
     <div></div>
   </section>
 
