--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <section id="rules" class="section">
       <h2>Rules and Regulations</h2>
-      <p>Participants must reside in Oregon.</p>
+      <p>Participants must reside in Oregon, Washington, or California.</p>
       <p>Memorization will be judged based on accuracy and tajweed.</p>
       <p>Categories will be based on age and Juz levels.</p>
     </section>
