--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
       <h2>Platinum Sponsors</h2>
       <div class="judges-grid">
         <img
-          src="sponsors/MET.png"
+          src="sponsors/met.png"
           alt="Muslim Educational Trust"
           onclick="showJudgeCard('met')"
         />
         <img
-          src="sponsors/ICCH.jpg"
+          src="sponsors/icch.jpg"
           alt="Islamic Community Center of Hillsboro"
           onclick="showJudgeCard('icch')"
         />
         <img
-          src="sponsors/Assaber.png"
+          src="sponsors/assaber.png"
           alt="Masjid Assaber"
           onclick="showJudgeCard('assaber')"
         />
