add community partners

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="#register">Register</a>
       <a href="#contact">Contact</a>
       <a href="#donate">Donate</a>
+      <a href="#partners">Partners</a>
     </nav>
 
     <section id="home" class="container">
@@ -153,5 +154,96 @@
       <p><strong>EIN:</strong> 39-2141910</p>
     </section>
   </body>
+
+  <section id="partners" class="section">
+    <h2>Community Partners</h2>
+    <div class="judges-grid">
+      <img
+        alt="Masjid Abu-Bakr"
+        src="partners/abubakr.jpg"
+        onclick="showJudgeCard('abubakr')"
+      />
+      <img
+        alt="Cool Islam"
+        src="partners/coolislam.png"
+        onclick="showJudgeCard('coolislam')"
+      />
+      <img
+        alt="Crescent PDX Sports"
+        src="partners/crescent.jpg"
+        onclick="showJudgeCard('crescent')"
+      />
+      <img
+        alt="Masjid Al-Furqan"
+        src="partners/furqan.jpg"
+        onclick="showJudgeCard('furqan')"
+      />
+      <img
+        alt="Human Development Fund"
+        src="partners/hdf.png"
+        onclick="showJudgeCard('hdf')"
+      />
+      <img
+        alt="Masjid Ibrahim"
+        src="partners/masjidibrahim.png"
+        onclick="showJudgeCard('ibrahim')"
+      />
+      <img
+        alt="Islamic Society of Greater Portland"
+        src="partners/isgp.png"
+        onclick="showJudgeCard('isgp')"
+      />
+      <img
+        alt="Muslim American Society - Portland"
+        src="partners/mas.png"
+        onclick="showJudgeCard('masportland')"
+      />
+      <img
+        alt="Towhid Islamic Center"
+        src="partners/towhid.jpg"
+        onclick="showJudgeCard('towhid')"
+      />
+      <img
+        alt="Northwest Dawah Foundation"
+        src="partners/nwdawah.jpg"
+        onclick="showJudgeCard('nwdf')"
+      />
+      <img
+        alt="Oregon Da'wah Initiative"
+        src="partners/oregondawah.png"
+        onclick="showJudgeCard('oregondawah')"
+      />
+      <img
+        alt="Oregon State University MSA"
+        src="partners/osumsa.png"
+        onclick="showJudgeCard('osumsa')"
+      />
+      <img
+        alt="Peace Action Network"
+        src="partners/peaceaction.jpg"
+        onclick="showJudgeCard('peaceaction')"
+      />
+      <img
+        alt="Portland State University MSA"
+        src="partners/pdxmsa.jpg"
+        onclick="showJudgeCard('psumsa')"
+      />
+      <img
+        alt="University of Portland MSA"
+        src="partners/upmsa.jpg"
+        onclick="showJudgeCard('upmsa')"
+      />
+      <img
+        alt="Wilsonville Muslim Community Center"
+        src="partners/wmcc.png"
+        onclick="showJudgeCard('wmcc')"
+      />
+      <img
+        alt="Zain Institute"
+        src="partners/zain.png"
+        onclick="showJudgeCard('zain')"
+      />
+    </div>
+  </section>
   <button id="scroll-down-btn" onclick="scrollToNextSection()">↓</button>
 </html>
