add youtube and facebook

--- a/index.html
+++ b/index.html
@@ -134,6 +134,24 @@
           >@ibnkatheercomp</a
         >
       </p>
+      <p>
+        YouTube:
+        <a
+          href="https://www.youtube.com/@IbnKatheerComp"
+          rel="noopener noreferrer"
+          target="_blank"
+          >@IbnKatheerComp</a
+        >
+      </p>
+      <p>
+        Facebook:
+        <a
+          href="https://www.facebook.com/profile.php?id=61577202344897#"
+          rel="noopener noreferrer"
+          target="_blank"
+          >Ibn Katheer Quran Competition</a
+        >
+      </p>
     </section>
 
     <section id="donate" class="section">
