update rules to be coming soon

--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
 
     <section id="rules" class="section">
       <h2>Rules and Regulations</h2>
-      <p>Participants must reside in Oregon, Washington, or California.</p>
-      <p>Memorization will be judged based on accuracy and tajweed.</p>
-      <p>Categories will be based on age and Juz levels.</p>
+      <!-- <p>Participants must reside in Oregon, Washington, or California.</p> -->
+      <p>Coming soon.</p>
     </section>
 
     <section id="register" class="section">
