--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Ibn Katheer Quran Competition</title>
     <link rel='icon' href='logo.ico' type='image/x-icon'/ >
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/SlickNav/1.0.10/slicknav.min.css"
+    />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/SlickNav/1.0.10/jquery.slicknav.min.js"></script>
     <script defer src="script.js"></script>
   </head>
   <body>
@@ -19,6 +25,20 @@
       <a href="#contact">Contact</a>
       <a href="#donate">Donate</a>
       <a href="#partners">Partners</a>
+    </nav>
+
+    <nav>
+      <ul id="menu">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#sponsors">Sponsors</a></li>
+        <li><a href="#judges">Judges</a></li>
+        <li><a href="#rules">Rules</a></li>
+        <li><a href="#register">Register</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#donate">Donate</a></li>
+        <li><a href="#partners">Partners</a></li>
+      </ul>
     </nav>
 
     <section id="home" class="container">
