add rules to site

--- a/index.html
+++ b/index.html
@@ -110,12 +110,30 @@
           onclick="showJudgeCard('wasil')"
         />
       </div>
+      <h3>Local Judges</h3>
+      <p>Coming soon...</p>
+      <!-- <ul>
+        <li>Br. Haitham Saeed</li>
+        <li>Sr. Maryam</li>
+        <li>Br. Mohamed Abouzeid</li>
+        <li>Sr. Nehad Elrody</li>
+        <li>Br. Oweis</li>
+        <li>Sr. Reiham Ibrahim</li>
+      </ul> -->
     </section>
 
     <section id="rules" class="section">
       <h2>Rules and Regulations</h2>
-      <!-- <p>Participants must reside in Oregon, Washington, or California.</p> -->
-      <p>Coming soon.</p>
+      <h3>
+        <a
+          title="Rules"
+          href="rules"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="donate-btn"
+          >Click to View Rules</a
+        >
+      </h3>
     </section>
 
     <section id="register" class="section">
