add local judges

--- a/index.html
+++ b/index.html
@@ -111,15 +111,14 @@
         />
       </div>
       <h3>Local Judges</h3>
-      <p>Coming soon...</p>
-      <!-- <ul>
+      <ul>
         <li>Br. Haitham Saeed</li>
-        <li>Sr. Maryam</li>
+        <li>Sr. Maryam Hassan</li>
         <li>Br. Mohamed Abouzeid</li>
         <li>Sr. Nehad Elrody</li>
-        <li>Br. Oweis</li>
+        <li>Br. Owais Ahmad</li>
         <li>Sr. Reiham Ibrahim</li>
-      </ul> -->
+      </ul>
     </section>
 
     <section id="rules" class="section">
