--- a/rules/index.html
+++ b/rules/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rules</title>
+    <link rel='icon' href='logo.ico' type='image/x-icon'/ >
+    <link rel="stylesheet" href="styles.css" />
     <meta http-equiv="refresh" content="0;url=https://docs.google.com/document/d/1feQN0ZomlG-2LKDowIOuJLU0Qv_C3Upd4nDudSSpg94/edit?usp=sharing">
     <title>Redirecting...</title>
   </head>
