--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <li>Sr. Maryam Hassan</li>
         <li>Br. Mohamed Abouzeid</li>
         <li>Sr. Nehad Elrody</li>
-        <li>Br. Owais Ahmad</li>
+        <li>Br. Oweis Ishaq</li>
         <li>Sr. Reiham Ibrahim</li>
       </ul>
     </section>
